# human-services-ai-architecture

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: PUSH_INSTRUCTIONS.md  REPO_DESCRIPTION.txt
docs/: 90_DAY_IMPLEMENTATION.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EU_AI_ACT_COMPLIANCE.md  GLOBAL_REGULATORY_MAP.md  NO_WRONG_DOOR.md  VERIFICATION_REPORT.md
docs/diagrams/: agent_orchestration.mermaid  architecture_overview.mermaid  citizen_journey.mermaid  compliance_mapping.mermaid  life_event_cascade.mermaid  mcp_eligibility_flow.mermaid  neuro_symbolic_boundary.mermaid  ontology_firewall_flow.mermaid
examples/: audit_trail_demo.py  benefits_eligibility.py  citizen_explanation_demo.py  compliance_report.py  life_event_processing.py  no_wrong_door.py  ontology_firewall_demo.py  quickstart.py
ontologies/: eligibility_shapes.ttl  human_services.ttl  life_events.ttl  medicaid_program.ttl  snap_program.ttl
scripts/: compliance_audit.py  demo.py  validate_ontologies.py
src/human_services/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: test_contextually_insane_agent.py  test_cross_program_review.py  test_deterministic_guarantee.py  test_eu_ai_act_article_12.py  test_eu_ai_act_article_13.py  test_eu_ai_act_article_14.py  test_eu_ai_act_article_15.py  test_eu_ai_act_article_9.py  test_medicaid_full_pipeline.py  test_no_wrong_door.py  test_snap_full_pipeline.py
tests/scenarios/: __init__.py  compliance_audit_simulation.py  contextually_insane_agent.py  coverage_churn_prevention.py  life_event_job_loss.py  single_mother_scenario.py
tests/unit/: test_agent_specs.py  test_audit_trail.py  test_compliance_checker.py  test_data_models.py  test_eligibility_server.py  (+6 more)
(+29 files in other folders)
